--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.13",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@wry/context": "^0.7.2",
+    "@wry/equality": "^0.5.5",
     "dotenv": "^16.0.3",
     "firebase": "^9.13.0",
     "graphql": "^16.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.3",
     "sweetalert2": "^11.7.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
@@ -46,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^12.1.5"
   }
 }
