--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-REACT_APP_API_URL=https://petshop-nvst.onrender.com
+REACT_APP_API_URL=http://localhost:4000
+GENERATE_SOURCEMAP=false
 
 REACT_APP_FIREBASE_API_KEY=AIzaSyBlgSRccgyLnYDrE7p2_cZKYaT3q5mlnPU
 REACT_APP_FIREBASE_AUTH_DOMAIN=pet-shop-7fda9.firebaseapp.com
